--- a/src/p2-homeworks/h2/Affair.module.css
+++ b/src/p2-homeworks/h2/Affair.module.css
@@ -1,10 +1,11 @@
 .affair__wrapper {
     display: flex;
-    gap: 10px;
+    align-items: flex-end;
 }
 
-.affair__text, .affair__priority, .delete__btn {
+.affair__text, .affair__priority {
     background: #ffffff;
+    margin-right: 10px;
     font-size: 14px;
     line-height: 14px;
     padding: 4px;
@@ -18,19 +19,4 @@
 
 .affair__priority {
     width: 45px;
-}
-
-.delete__btn {
-    cursor: pointer;
-    width: 28px;
-    height: 28px;
-    border-radius: 50%;
-    transition: all .5s;
-    font-weight: 700;
-}
-
-.delete__btn:hover {
-    color: #ffffff;
-    background: #000000;
-    border: 2px solid #ffffff;
 }
