--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -1,11 +1,15 @@
-.blue {
-    border-bottom: 5px solid blue;
-}
-
-.column {
+.hw__items {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 10px;
+    padding: 10px 15px;
+    min-height: 70px;
+    background: #d2f600;
+}
+
+.blue {
+    border-bottom: 5px solid blue;
 }
 
 .testSpanError {
